[package]
name = "vaultwalker"
version = "0.3.0"
authors = ["Pierre Millot <millotpierre3@gmail.com>"]
license = "MIT"
description = "A CLI tool to browse Hashicorp Vault secrets"
readme = "README.md"
homepage = "https://github.com/millotp/vaultwalker"
repository = "https://github.com/millotp/vaultwalker"
keywords = ["vault", "hashicorp", "cli"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "vw"

[dependencies]
quick-error = "2.0.1"
serde_json = "1.0.100"
serde = "1.0.171"
serde_derive = "1.0.171"
ctrlc = "3.4.0"
home = "0.5.5"
clipboard = "0.5.0"
ureq = "2.7.1"
gumdrop = "0.8.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
